# soterralabs-site

./: .env.example  .gitignore  gpu-navigator.html  index.html  index3.html  products.html  robots.txt  sitemap.xml
anvil/: README.md  index.html  pyproject.toml  style.css
anvil/data/: engine_facts.sqlite  mlperf.sqlite  pricing.sqlite
anvil/docs/specs/: 2026-04-28-engine-facts-v1.md  2026-04-28-engine-facts-wave-1b.md  2026-04-29-engine-facts-wave-1b2.md  2026-04-29-engine-facts-wave-1e-render.md
anvil/engines/: index.html
anvil/mlperf/: index.html
anvil/pricing/: index.html
anvil/render/: build.py
anvil/render/templates/: base.html.j2  landing.html.j2  pricing.html.j2
anvil/scripts/: _canonical_validator.py  _constants.py  _fetcher_base.py  _metric_inference.py  cloud_mappings.py  extract_all_engines.py  fetch_aws_pricing.py  fetch_azure_pricing.py  fetch_gcp_pricing.py  fetch_mlperf.py  metric_plausibility.py  mlperf_accelerator_map.py  mlperf_rounds.yaml  mlperf_tracked.yaml  notify.py  price_plausibility.py
anvil/scripts/extractors/: __init__.py  _canonical_fact_types.py  _http.py  _parsers.py  base.py  deepspeed_mii.py  engines.yaml  llama_cpp.py  lmdeploy.py  mlc_llm.py  ollama.py  sglang.py  tensorrt_llm.py  tgi.py  vllm.py
anvil/tests/: conftest.py  test_build.py  test_build_engines.py  test_build_mlperf.py  test_build_ops.py  test_canonical_property.py  test_canonical_truth.py  test_canonical_validator.py  test_fetch_aws_pricing.py  test_fetch_gcp_pricing.py  test_fetch_mlperf.py  test_fetcher_base.py  test_metric_inference.py  test_metric_plausibility.py  test_mlperf_accelerator_map.py  test_mlperf_yaml_configs.py  test_notify.py  test_price_plausibility.py  test_render_diff_harness.py  test_render_site_4c_legal.py  test_render_site_content.py  test_render_site_scaffold.py  test_security_regression.py  test_visual_audit_report.py
anvil/tests/extractors/: test_base.py  test_canonical_fact_types.py  test_deepspeed_mii.py  test_http.py  test_llama_cpp.py  test_lmdeploy.py  test_mlc_llm.py  test_ollama.py  test_orchestrator.py  test_orchestrator_extraction.py  test_parsers.py  test_sglang.py  test_tensorrt_llm.py  test_tgi.py  test_vllm.py
anvil/tests/fixtures/: aws_offers_us_east_1.json  synthetic_post.md
anvil/tools/: seed_demo_data.py  seed_demo_mlperf.py
legal/: index.html
(+101 files in other folders)
