[project]
name = "soterra-anvil"
version = "0.1.0"
description = "Soterra Labs Anvil — automated GPU pricing + MLPerf reference pages"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0,<0.28.0",
    "pydantic>=2.4.0,<3.0.0",
    "Jinja2>=3.1.6,<3.2.0",
    "PyYAML>=6.0.0,<7.0.0",
    "selectolax>=0.3.0,<0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "pip-audit>=2.7.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "render"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["scripts", "render"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
