[project]
name = "soterra-anvil"
version = "0.1.0"
description = "Soterra Labs Anvil — automated GPU pricing + MLPerf reference pages"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0,<0.28.0",
    "pydantic>=2.4.0,<3.0.0",
    "Jinja2>=3.1.6,<3.2.0",
    "PyYAML>=6.0.0,<7.0.0",
    "selectolax>=0.3.0,<0.4.0",
    # Wave 4B.3 — thinking-post markdown loader (render/site/loaders/markdown.py).
    # Sri-approved 2026-04-27 per supply-chain rule.
    "markdown>=3.5.0,<4.0.0",
    "python-frontmatter>=1.1.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "pip-audit>=2.7.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# After Wave 4A, render/ moved to repo root. Tests need both:
#   "."  → anvil/  (so `from scripts.foo` resolves)
#   ".." → repo root  (so `from render.anvil.foo` resolves)
pythonpath = [".", ".."]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["scripts", "../render/anvil"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
